Bug 491537.  Make sure to set dirty buts all the way up the tree when interrupting inside an abs pos child or child of a columnset.  r+sr=dbaron